2008-12-01  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/38245
	* tree-vrp.c (abs_extent_range): New function.
	(extract_range_from_binary_expr): Compute range
	for *_DIV_EXPR even if vr1 is VR_VARYING, VR_ANTI_RANGE
	or includes zero or if vr1 is VR_RANGE and op0 has some
	other range.

2008-12-01  Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/37908
	* config/alpha/alpha.c (alpha_split_atomic_op): Properly handle NAND
	case by calculating ~(new_reg & val) instead of (~new_reg & val).
	* config/alpha/sync.md (sync_nand<mode>): Change insn RTX
	to (not:I48MODE (and:I48MODE (...))).
	(sync_old_nand<mode>): Ditto.
	(sync_new_nand<mode>): Ditto.

2008-12-01  Nick Clifton  <nickc@redhat.com>

	* config/stormy16/stormy16.md (CARRY_REG): New constant.
	Replace uses of the "y" register class with direct references to
	the CARRY_REG register.
	* config/stormy16/stormy16.c: Replace clobbers of a BImode scratch
	register with clobbers of the carry register.
	(xstormy16_secondary_reload_class): Do not return CARRY_REGS.
	(xstormy16_split_cbranch): Remove redundant carry parameter.
	(xstormy16_expand_arith): Likewise.
	* config/stormy16/stormy16.h (enum reg_class): Remove CARRY_REGS.
	(IRA_COVER_CLASSES, REG_CLASS_NAMES, REG_CLASS_CONTENTS,
	REGNO_REG_CLASS, REG_CLASS_FROM_LETTER): Likewise.
	(CARRY_REGNUM): Define.
	* config/stormy16/stormy16-protos.h (xstormy16_split_cbranch):
	Update prototype.
	(xstormy16_expand_arith): Likewise.

2008-12-01  Chen Liqin  <liqin.chen@sunplusct.com>

	* config/score/score.h (IRA_COVER_CLASSES): Define.

2008-11-30  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/38287
	* config/sparc/sparc.md (divsi3 expander): Remove constraints.
	(divsi3_sp32): Add new alternative with 'K' for operand #2.
	(cmp_sdiv_cc_set): Factor common string.
	(udivsi3_sp32): Add new alternative with 'K' for operand #2.
	Add TARGET_V9 case.
	(cmp_udiv_cc_set): Factor common string.

2008-11-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
