@@ -1,3 +1,8 @@
+2008-12-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/38348
+	* testsuite/libgomp.c++/for-6.C: New test.
+
 2008-11-26  Janis Johnson  <janis187@us.ibm.com>
 
 	PR testsuite/28870
